# career-intelligence-platform

./: .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-SUMMARY.md  Makefile  README.md  SECURITY.md  package.json  pnpm-lock.yaml
apps/backend/: .env.example  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/backend/src/: main.py
apps/backend/src/ai/embeddings/: embedder.py
apps/backend/src/ai/explainability/: explainer.py
apps/backend/src/ai/psychometric_engine/: dimensions.py  question_bank.py  scorer.py
apps/backend/src/ai/recommendation_engine/: faiss_index.py  ranker.py
apps/backend/src/api/v1/dependencies/: auth.py
apps/backend/src/api/v1/endpoints/: assessment.py  auth.py  careers.py  chat.py  dropbox_oauth.py  onedrive_oauth.py  profile.py  stateless.py  storage_oauth.py
apps/backend/src/core/cache/: redis_client.py
apps/backend/src/core/config/: settings.py
apps/backend/src/core/logging/: setup.py
apps/backend/src/core/security/: jwt.py
apps/backend/src/db/: engine.py
apps/backend/src/db/migrations/: env.py
apps/backend/src/db/migrations/versions/: 0001_initial_schema.py  20260624134831_create_initial_tables.py
apps/backend/src/db/models/: __init__.py  base.py  career.py  profile.py  user.py
apps/backend/src/db/repositories/: base.py  career.py  psychometric.py  user.py
apps/backend/src/schemas/requests/: assessment.py  auth.py  chat.py  recommendation.py  stateless.py  storage_oauth.py
apps/backend/src/schemas/responses/: assessment.py  auth.py  chat.py  recommendation.py  stateless.py  storage_oauth.py
apps/backend/src/scripts/: load_onet.py
apps/backend/src/services/auth/: auth_service.py
apps/backend/src/services/chat/: chat_service.py
apps/backend/src/services/profile/: profile_service.py
apps/backend/src/services/psychometric/: assessment_service.py
apps/backend/src/services/recommendation/: recommendation_service.py
apps/backend/src/services/stateless/: stateless_service.py
apps/backend/src/services/storage_oauth/: dropbox_oauth_service.py  google_oauth_service.py  onedrive_oauth_service.py
apps/backend/tests/: conftest.py
apps/backend/tests/unit/ai/: conftest.py  test_profile_service.py  test_psychometric_scorer.py  test_recommendation_service.py  test_stateless_service.py
apps/backend/tests/unit/api/: test_auth.py  test_careers_endpoint.py
docs/: ROADMAP.md  (+1 more)
(+120 files in other folders)
